<resources>
    <string name="app_name">記帳日記</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">使用者暱稱</string>
    <string name="nav_header_subtitle">使用者信箱</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">登出</string>

    <string name="menu_home">主頁</string>
    <string name="menu_trackexpenses">我的記帳</string>
    <string name="menu_diary">我的日記</string>
    <string name="menu_uniforminvoicelottery">發票兌獎</string>
    <string name="menu_member">修改會員資料</string>
    <string name="AllRememberCheck">記住我們</string>
    <string name="EveryRememberCheck">自動登入</string>
    <string name="LoginBtn">登入</string>
    <string name="ReigisterBtn">註冊</string>
    <string name="StartBtn">直接開始</string>
    <string name="ragister_name">註冊</string>
    <string name="OKBtn">提交資料</string>
    <string name="trackExpensesBtn">打開帳本</string>
    <string name="diaryBtn">打開日記本</string>
    <string name="calendarBtn">選擇日期</string>
    <string name="CBtn">清空</string>
    <string name="backSpaceBtn">倒退</string>
    <string name="sevenBtn">7</string>
    <string name="eightBtn">8</string>
    <string name="nineBtn">9</string>
    <string name="fourBtn">4</string>
    <string name="fiveBtn">5</string>
    <string name="sixBtn">6</string>
    <string name="oneBtn">1</string>
    <string name="twoBtn">2</string>
    <string name="threeBtn">3</string>
    <string name="zeroBtn">0</string>
    <string name="multiplyBtn">*</string>
    <string name="minusBtn">-</string>
    <string name="addBtn">+</string>
    <string name="equalsBtn">=</string>
    <string name="historyName">上次餘額</string>
    <string name="incomeText">本次收入</string>
    <string name="costText">本次支出</string>
    <string name="CountBtn">計算</string>
    <string name="SaveBtn">儲存</string>
    <string name="MemberText">會員資料</string>
    <string name="NickNameText">暱稱:</string>
    <string name="EmailText">E-mail:</string>
    <string name="PasswordText">密碼:</string>
    <string name="Password2Text">再次輸入密碼:</string>


</resources>