<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_trackexpenses"
            android:icon="@drawable/baseline_attach_money_24"
            android:title="@string/menu_trackexpenses" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/baseline_book_24"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_uniforminvoicelottery"
            android:icon="@drawable/baseline_volunteer_activism_24"
            android:title="@string/menu_uniforminvoicelottery" />
        <item
            android:id="@+id/nav_member"
            android:icon="@drawable/baseline_emoji_people_24"
            android:title="@string/menu_member" />
    </group>
</menu>