<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trackexpensesdiarydemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_trackexpenses"
        android:name="com.example.trackexpensesdiarydemo.ui.trackexpenses.TrackExpensesFragment"
        android:label="@string/menu_trackexpenses"
        tools:layout="@layout/fragment_trackexpenses" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.trackexpensesdiarydemo.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />
    <fragment
        android:id="@+id/nav_uniform_invoice_lottery"
        android:name="com.example.trackexpensesdiarydemo.ui.uniforminvoicelottery.UniformInvoiceLotteryFragment"
        android:label="@string/menu_uniforminvoicelottery"
        tools:layout="@layout/fragment_uniform_invoice_lottery" />
    <fragment
        android:id="@+id/nav_member"
        android:name="com.example.trackexpensesdiarydemo.ui.member.MemberFragment"
        android:label="@string/menu_member"
        tools:layout="@layout/fragment_member" />

</navigation>