<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="261dp"
        android:layout_height="62dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="408dp"
        android:ems="10"
        android:hint="請輸入密碼"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="146dp"
        android:layout_height="43dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="504dp"
        android:text="@string/LoginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StartBtn"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="124dp"
        android:text="@string/StartBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ReigisterBtn"
        android:layout_width="99dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="124dp"
        android:text="@string/ReigisterBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/AppIcon"
        android:layout_width="126dp"
        android:layout_height="193dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/appicon" />

    <EditText
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:hint="請輸入電子信箱"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/AllRememberCheck"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="236dp"
        android:text="@string/AllRememberCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/EveryRememberCheck"
        android:layout_width="119dp"
        android:layout_height="31dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="236dp"
        android:text="@string/EveryRememberCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>